; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_kv_dpm.c_kv_enable_nb_dpm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_kv_dpm.c_kv_enable_nb_dpm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32 }
%struct.kv_power_info = type { i32, i64 }

@PPSMC_MSG_NBDPM_Enable = common dso_local global i32 0, align 4
@PPSMC_MSG_NBDPM_Disable = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amdgpu_device*, i32)* @kv_enable_nb_dpm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kv_enable_nb_dpm(%struct.amdgpu_device* %0, i32 %1) #0 {
  %3 = alloca %struct.amdgpu_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.kv_power_info*, align 8
  %6 = alloca i32, align 4
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %8 = call %struct.kv_power_info* @kv_get_pi(%struct.amdgpu_device* %7)
  store %struct.kv_power_info* %8, %struct.kv_power_info** %5, align 8
  store i32 0, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %32

11:                                               ; preds = %2
  %12 = load %struct.kv_power_info*, %struct.kv_power_info** %5, align 8
  %13 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %31

16:                                               ; preds = %11
  %17 = load %struct.kv_power_info*, %struct.kv_power_info** %5, align 8
  %18 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %31, label %21

21:                                               ; preds = %16
  %22 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %23 = load i32, i32* @PPSMC_MSG_NBDPM_Enable, align 4
  %24 = call i32 @amdgpu_kv_notify_message_to_smu(%struct.amdgpu_device* %22, i32 %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %21
  %28 = load %struct.kv_power_info*, %struct.kv_power_info** %5, align 8
  %29 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %28, i32 0, i32 0
  store i32 1, i32* %29, align 8
  br label %30

30:                                               ; preds = %27, %21
  br label %31

31:                                               ; preds = %30, %16, %11
  br label %53

32:                                               ; preds = %2
  %33 = load %struct.kv_power_info*, %struct.kv_power_info** %5, align 8
  %34 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %52

37:                                               ; preds = %32
  %38 = load %struct.kv_power_info*, %struct.kv_power_info** %5, align 8
  %39 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %52

42:                                               ; preds = %37
  %43 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %44 = load i32, i32* @PPSMC_MSG_NBDPM_Disable, align 4
  %45 = call i32 @amdgpu_kv_notify_message_to_smu(%struct.amdgpu_device* %43, i32 %44)
  store i32 %45, i32* %6, align 4
  %46 = load i32, i32* %6, align 4
  %47 = icmp eq i32 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %42
  %49 = load %struct.kv_power_info*, %struct.kv_power_info** %5, align 8
  %50 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %49, i32 0, i32 0
  store i32 0, i32* %50, align 8
  br label %51

51:                                               ; preds = %48, %42
  br label %52

52:                                               ; preds = %51, %37, %32
  br label %53

53:                                               ; preds = %52, %31
  %54 = load i32, i32* %6, align 4
  ret i32 %54
}

declare dso_local %struct.kv_power_info* @kv_get_pi(%struct.amdgpu_device*) #1

declare dso_local i32 @amdgpu_kv_notify_message_to_smu(%struct.amdgpu_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
